# cargo-assemble

./: Cargo.toml  LICENSE  README.md
src/: cmd.rs  main.rs  ws.rs
