[package]
name = "cargo-assemble"
version = "0.1.2"
edition = "2021"
description = "Cargo plugin to automate creating missing packages defined in a Rust workspace"

keywords = ["cargo", "workspace", "generator", "automation"]
categories = [
    "development-tools::cargo-plugins",
    "command-line-utilities"
]

license = "MIT"
readme = "README.md"
repository = "https://github.com/serialexperimentsrio/cargo-assemble"

[[bin]]
name = "cargo-assemble"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["cargo", "derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.0"